# torchforge

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.meta/mast/: hydrate_cache.py
apps/grpo/: main.py  qwen3_1_7b.yaml  qwen3_8b.yaml
apps/sft/: main.py
src/forge/actors/: coder.py  generator.py  reference_model.py  replay_buffer.py
src/forge/actors/trainer/: titan.py
src/forge/controller/: launcher.py  provisioner.py
src/forge/controller/service/: replica.py  service.py  spawn.py
src/forge/data/: tokenizer.py
src/forge/data/datasets/: packed.py  sft_dataset.py
src/forge/losses/: reinforce_loss.py
src/forge/observability/: metric_actors.py  metrics.py  perf_tracker.py
src/forge/util/: logging.py
tests/integration_tests/: test_titan_fwd_vs_hf_fwd.py
tests/sandbox/toy_rl/toy_metrics/: main.py
tests/sandbox/weight_sync/: qwen3_8b.yaml
tests/unit_tests/: test_coder.py
tests/unit_tests/datasets/: test_hf.py  test_interleaved.py
tests/unit_tests/observability/: conftest.py  test_metrics.py  test_perf_tracker.py
